--- a/circuitpy/www/style.css
+++ b/circuitpy/www/style.css
@@ -2,20 +2,15 @@ body {
 	font-family: "Inter";
 	font-feature-settings: "tnum", "case", "cv02", "cv03", "cv04", "cv07", "cv09", "cv08", "cv05", "calt";
 	font-variant-ligatures: none;
-
 	background-color: black;
 	color: white;
 }
-
 .modes_flex_container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	/* width: 100%; */
 }
-
 .modes_flex_child {
-	/* border: 2px solid green; */
 	flex: 1;
 	min-width: 160px;
 	max-width: 240px;
@@ -23,17 +18,14 @@ body {
 	margin: 5px;
 	overflow: hidden;
 }
-
 button {
 	background-color: #333;
 	color: white;
 	border: none;
 }
-
 button:hover {
 	background-color: #5f5f5f;
 }
-
 .modes_button_start {
 	width: 70%;
 	height: 100%;
@@ -41,23 +33,18 @@ button:hover {
 	border-top-left-radius: 7px;
 	border-bottom-left-radius: 7px;
 }
-
-.modes_button_start:hover,
-.modes_button_config:hover {
-	
-}
-
 .modes_button_config {
 	width: 30%;
 	height: 100%;
 	border-top-right-radius: 7px;
 	border-bottom-right-radius: 7px;
 }
-
 svg {
 	height: 24px;
 }
-
+img {
+	height: 24px;
+}
 .slider {
 	width: 100%;
 	height: 25px;
@@ -66,22 +53,18 @@ svg {
 	-webkit-transition: .2s;
 	transition: opacity .2s;
 }
-
 .brightness_button_container {
 	padding-top: 3px;
 	display: flex;
 }
-
 .brightness_button_off, .brightness_button_on {
 	width: 100%;
 	height: 50px;
 }
-
 .brightness_button_off {
 	border-top-left-radius: 7px;
 	border-bottom-left-radius: 7px;
 }
-
 .brightness_button_on {
 	border-top-right-radius: 7px;
 	border-bottom-right-radius: 7px;
